<resources>

    <string name="app_name">BulletHell</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">BulletHellActivity</string>
    <string name="bullet_hell">Android Bullet Hell</string>
    <string name="play">Play</string>
    <string name="about">About</string>
    <string name="options">Options</string>
    <string name="high_scores">High Scores</string>
    <string name="about_description">Developed by Jackson Melling and Brandon Knight for Android Development at Rose-Hulman Institute of Technology.</string>
    <string name="ok">OK</string>
    <string name="clear_scores">Clear Highscores</string>
    <string name="clear_scores_key">SCORES_KEY</string>
    <string name="ship_select">Select Your Ship</string>
    <string name="ship_select_k">SHIP_KEY</string>
    <string name="ship_select_d">Choose a ship from classic games</string>
    <string name="galaga">Galaga</string>
    <string name="asteroid">Asteroid</string>
    <string name="galaga_k">GALAGA_KEY</string>
    <string name="asteroid_k">ASTEROID_KEY</string>
    <string name="new_wave">New Wave!</string>
    <string name="you_died">You Died! :(</string>

</resources>